Fix horizontal scroll bar in landing page.

--- a/src/landing/index.css
+++ b/src/landing/index.css
@@ -21,7 +21,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 20px;
+  margin: 20px 0;
   width: 100%;
 }
 
